worked on the ecover and ebook controller

--- a/.env
+++ b/.env
@@ -48,5 +48,12 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+CLOUDINARY_URL=cloudinary://995661596897917:l46CkW-ynLYVEChnSxKB4j9F3Ek@funnel
+CLOUDINARY_UPLOAD_PRESET=xxxxxxxxxxxxx
+CLOUDINARY_NOTIFICATION_URL=
+CLOUDINARY_API_KEY=995661596897917
+CLOUDINARY_API_SECRET=l46CkW-ynLYVEChnSxKB4j9F3Ek
+CLOUDINARY_CLOUD_NAME = "Funnel"
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
